add piggyback fields need to finish reports

--- a/EncompassSettings/EncompassSettings.csproj
+++ b/EncompassSettings/EncompassSettings.csproj
@@ -241,8 +241,10 @@
     <Compile Include="EncompassSettingsManager\CustomFields.cs" />
     <Compile Include="EncompassSettingsManager\Documents.cs" />
     <Compile Include="EncompassSettingsManager\Fees.cs" />
+    <Compile Include="EncompassSettingsManager\Fields.cs" />
     <Compile Include="EncompassSettingsManager\Personas.cs" />
     <Compile Include="EncompassSettingsManager\PipelineViews.cs" />
+    <Compile Include="EncompassSettingsManager\Reports.cs" />
     <Compile Include="EncompassSettingsManager\Secondary.cs" />
     <Compile Include="EncompassSettingsManager\Users.cs" />
     <Compile Include="Program.cs" />
