--- a/EncompassSettings/EncompassSettings.csproj
+++ b/EncompassSettings/EncompassSettings.csproj
@@ -245,11 +245,14 @@
     <Compile Include="EncompassSettingsManager\Documents.cs" />
     <Compile Include="EncompassSettingsManager\Fees.cs" />
     <Compile Include="EncompassSettingsManager\Fields.cs" />
+    <Compile Include="EncompassSettingsManager\Folders.cs" />
     <Compile Include="EncompassSettingsManager\Forms.cs" />
+    <Compile Include="EncompassSettingsManager\Groups.cs" />
     <Compile Include="EncompassSettingsManager\Orgs.cs" />
     <Compile Include="EncompassSettingsManager\Personas.cs" />
     <Compile Include="EncompassSettingsManager\PipelineViews.cs" />
     <Compile Include="EncompassSettingsManager\Reports.cs" />
+    <Compile Include="EncompassSettingsManager\Roles.cs" />
     <Compile Include="EncompassSettingsManager\Secondary.cs" />
     <Compile Include="EncompassSettingsManager\Users.cs" />
     <Compile Include="Program.cs" />
